2008-09-23  Sanel <karijes@users.sourceforge.net>

	* src/String.cpp: chcpy() made static
	* src/String.cpp, src/Run.cpp, src/Sipc.cpp, src/Resource.cpp: fix warnings from Sun's
	compiler

2008-09-22  Sanel <karijes@users.sourceforge.net>

	* src/Jamfile, examples/Jamfile: let files depending on FLTK 
	uses FLTK_CFLAGS
	* Jamrules: STDLIB variable will contain '-l' flag in case it is placed in
	non-standard path so search directories can be added (e.g. in case of
	different compiler)

2008-09-21  Sanel <karijes@users.sourceforge.net>

	* edelib/Sipc.h: updated documentation
	* test/mime.cpp: test for text/html mime now points to
	test/perf/asciidoc.html instead to removed doc/footer.html
	* TODO: added/removed entry
	* Jamrules: let 'jam distclean' remove Doxyfile too
	* doc/Doxyfile.in: now documentation should show correct include path

2008-09-20  Sanel <karijes@users.sourceforge.net>

	* edelib/TableBase.h: updated documentation
	* src/xdgmime/xdgmime.c: changed order of guessing so directories with
	"extensions" or extension-like names in the name doesn't be recognized 
	as files or unknown types e.g. '.kde', '.e' or '.emacs.d'

2008-09-15  Sanel <karijes@users.sourceforge.net>

	* TableBase.{h,cpp}: added TableBase based on Erco's Fl_Table widget
	* examples/list_view.cpp: TableBase sample
	* all: a massive fix of FLTK headers inclusion; recent reports shows that
	some distros does not install FLTK correctly so only .H files are 
	present, although .h symlinks should be created too

2008-09-14  Sanel <karijes@users.sourceforge.net>

	* Jamconfig.in, m4/initjamfile.m4: added localedir var

2008-09-13  Sanel <karijes@users.sourceforge.net>

	* Jamconfig.in, Jamrules, src/Jamrules: s/DBUSFLAGS/DBUS_CFLAGS,
	s/DBUSLIBS/DBUS_LIBS
	* m4/libxpm.m4: use LIBXPM_LIBS variable
	* m4/notify.m4: use LIBFAM_LIBS variable
	* all over: s/FLTKFLAGS/FLTK_CFLAGS, s/FLTKLIBS/FLTK_LIBS,
	s/FLTKLIBS_FULL/FLTK_LIBS_FULL, s/DEBUGFLAGS/DEBUG_FLAGS,